Implement city service
